# atk

./: DEPLOYMENT.md  Dockerfile  README.md  app.py  db_migration.py  docker-compose.yml  forms.py  main.py  migrate_cors_findings.py  migrate_csp_issues.py  models.py  pyproject.toml  requirements.txt  routes.py  scanner.py
attached_assets/: Pasted-to-detect-all-major-CORS-header-misconfigurations-explained-clearly-without-using-code-examples-1-1746704478261.txt  Pasted-we-need-change-the-approch-for-fetching-HTTP-Headers-Information-kindly-use-following-command-to-ge-1746700804548.txt  ssl_check.py
instance/: fallback.db
static/css/: custom.css
static/js/: charts.js  dashboard.js
templates/: 404.html  500.html  base.html  dashboard.html  history.html  index.html  scan_result.html
utils/: cookie_utils.py  cors_utils.py  crawler.py  disclosure_scanner.py  dns_utils.py  http_utils.py  ip_utils.py  port_scanner.py  ssl_utils.py  tech_utils.py  whois_utils.py
